# gramme-rs-template

./: .env.example  .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: rust.yml
src/: account.rs  account_manager.rs  main.rs  prelude.rs  utils.rs
