[package]
#name = "{{project-name}}"
name="gramme-rs-template"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
log = "0.4.20"
tokio = { version = "1.27.0", features = ["macros", "tracing", "rt-multi-thread"] }
grammers-client = { git = "https://github.com/mralisalehi/grammers" }
grammers-session = { git = "https://github.com/mralisalehi/grammers" }
grammers-tl-types = { git = "https://github.com/mralisalehi/grammers" }
